
erDiagram
    Customers {
        bigint id PK
        bigint phone_number UK
    }
    Musicals {
        bigint id PK
        varchar(255) title
        text description
        varchar(255) theatre_name
        bigint duration_in_seconds
        varchar(255) thumbnail_image_url
    }
    ShowTimes {
        bigint id PK
        bigint musical_id FK
        date show_date
        time start_time
        time end_time "startTime + Musical.durationInSeconds"
        int available_seats
    }
    Ticket_Types {
        bigint id PK
        varchar(255) name
        bigint musical_id FK
        decimal price
    }
    Tickets {
        bigint id PK
        bigint customer_id FK
        bigint musical_id
        bigint showtime_id
        int seat_number
        bigint ticket_type_id
    }

    Musicals ||--o{ ShowTimes : is_scheduled_for

    Customers }|--o{ Tickets : purchases
    Tickets ||--|| ShowTimes : is_for
    Tickets ||--|{ Ticket_Types : has